[package]
name = "b64-cli"
version = "0.1.0"
edition = "2021"
authors = ["Vishal Singh <vishalsingh2376@gmail.com>"]
description = "A Simple Cli Utility to encode and decode base64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
rbase64 = "2.0.3"
